Select upgrade with alias